fixing white line on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 46.87em) {
