--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -62,6 +62,7 @@ $font-primary: "Open Sans", sans-serif;
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1rem=10px
+  overflow-x: hidden;
 
   @include respond(small) {
     font-size: 75%;
